tests/operator/add_null_str.rev
"foo" + true // error: operation not supported